parser.output
Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Id: T_ID

    3 Classes: Class Classes
    4        | Class

    5 Type: T_INT
    6     | T_BOOL
    7     | Id

    8 ReturnType: T_INT
    9           | T_BOOL
   10           | Id
   11           | T_NONE

   12 Class: Id Extension T_OPENCURLYBRACE InsideClass T_CLOSECURLYBRACE

   13 Extension: T_EXTENDS Id
   14          | /* empty */

   15 InsideClass: Members

   16 Members: Member Members
   17        | Methods

   18 Member: Type Id

   19 Methods: Method Methods
   20        | /* empty */

   21 Method: Id T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLYBRACE MethodBody T_CLOSECURLYBRACE

   22 Params: Param MoreParams
   23       | /* empty */

   24 MoreParams: T_COMMA Param MoreParams
   25           | /* empty */

   26 Param: Id T_COLON Type

   27 MethodBody: Declarations MaybeReturn

   28 Declarations: Declaration Declarations
   29             | Statements

   30 Declaration: Type Id InlineDeclarations

   31 InlineDeclarations: T_COMMA Id InlineDeclarations
   32                   | /* empty */

   33 Statements: Statement Statements
   34           | /* empty */

   35 Assigner: Id T_EQ Expression
   36         | Id T_DOT Id T_EQ Expression

   37 Statement: Assigner
   38          | MethodCall
   39          | WhileStatement
   40          | PrintStatement
   41          | IfStatement

   42 PrintStatement: T_PRINT Expression

   43 WhileStatement: T_WHILE Expression T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE

   44 IfStatement: T_IF Expression T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE
   45            | T_IF Expression T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE T_ELSE T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE

   46 MaybeReturn: T_RETURN Expression
   47            | /* empty */

   48 Expression: Expression T_PLUS Expression
   49           | Expression T_MINUS Expression
   50           | Expression T_MULTI Expression
   51           | Expression T_DIVID Expression
   52           | Expression T_LESSTHAN Expression
   53           | Expression T_LESSTHANOREQ Expression
   54           | Expression T_EQUALS Expression
   55           | Expression T_AND Expression
   56           | Expression T_OR Expression
   57           | T_NOT Expression
   58           | T_MINUS Expression
   59           | Id
   60           | Id T_DOT Id
   61           | MethodCall
   62           | T_OPENPAREN Expression T_CLOSEPAREN
   63           | T_NUM
   64           | T_TRUE
   65           | T_FALSE
   66           | T_NEW Id
   67           | T_NEW Id T_OPENPAREN MethodCallParams T_CLOSEPAREN

   68 MethodCall: Id T_OPENPAREN MethodCallParams T_CLOSEPAREN
   69           | Id T_DOT Id T_OPENPAREN MethodCallParams T_CLOSEPAREN

   70 MethodCallParams: Expression MoreMethodCallParams
   71                 | /* empty */

   72 MoreMethodCallParams: T_COMMA Expression MoreMethodCallParams
   73                     | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PLUS (258) 48
T_MINUS (259) 49 58
T_MULTI (260) 50
T_DIVID (261) 51
T_EQ (262) 35 36
T_LESSTHAN (263) 52
T_LESSTHANOREQ (264) 53
T_OPENCURLYBRACE (265) 12 21 43 44 45
T_CLOSECURLYBRACE (266) 12 21 43 44 45
T_OPENPAREN (267) 21 62 67 68 69
T_CLOSEPAREN (268) 21 62 67 68 69
T_DOT (269) 36 60 69
T_NUM (270) 63
T_IF (271) 44 45
T_OR (272) 56
T_NEW (273) 66 67
T_AND (274) 55
T_NOT (275) 57
T_ELSE (276) 45
T_COLON (277) 26
T_COMMA (278) 24 31 72
T_NONE (279) 11
T_TRUE (280) 64
T_FALSE (281) 65
T_PRINT (282) 42
T_WHILE (283) 43
T_RETURN (284) 46
T_EQUALS (285) 54
T_BOOL (286) 6 9
T_INT (287) 5 8
T_EXTENDS (288) 13
T_ARROW (289) 21
T_ID (290) 2
then (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Start (38)
    on left: 1, on right: 0
Id (39)
    on left: 2, on right: 7 10 12 13 18 21 26 30 31 35 36 59 60 66
    67 68 69
Classes (40)
    on left: 3 4, on right: 1 3
Type (41)
    on left: 5 6 7, on right: 18 26 30
ReturnType (42)
    on left: 8 9 10 11, on right: 21
Class (43)
    on left: 12, on right: 3 4
Extension (44)
    on left: 13 14, on right: 12
InsideClass (45)
    on left: 15, on right: 12
Members (46)
    on left: 16 17, on right: 15 16
Member (47)
    on left: 18, on right: 16
Methods (48)
    on left: 19 20, on right: 17 19
Method (49)
    on left: 21, on right: 19
Params (50)
    on left: 22 23, on right: 21
MoreParams (51)
    on left: 24 25, on right: 22 24
Param (52)
    on left: 26, on right: 22 24
MethodBody (53)
    on left: 27, on right: 21
Declarations (54)
    on left: 28 29, on right: 27 28
Declaration (55)
    on left: 30, on right: 28
InlineDeclarations (56)
    on left: 31 32, on right: 30 31
Statements (57)
    on left: 33 34, on right: 29 33 43 44 45
Assigner (58)
    on left: 35 36, on right: 37
Statement (59)
    on left: 37 38 39 40 41, on right: 33
PrintStatement (60)
    on left: 42, on right: 40
WhileStatement (61)
    on left: 43, on right: 39
IfStatement (62)
    on left: 44 45, on right: 41
MaybeReturn (63)
    on left: 46 47, on right: 27
Expression (64)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67, on right: 35 36 42 43 44 45 46 48 49 50 51 52 53 54 55 56
    57 58 62 70 72
MethodCall (65)
    on left: 68 69, on right: 38 61
MethodCallParams (66)
    on left: 70 71, on right: 67 68 69
MoreMethodCallParams (67)
    on left: 72 73, on right: 70 72


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    Id       go to state 3
    Classes  go to state 4
    Class    go to state 5


State 1

    2 Id: T_ID .

    $default  reduce using rule 2 (Id)


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 6


State 3

   12 Class: Id . Extension T_OPENCURLYBRACE InsideClass T_CLOSECURLYBRACE

    T_EXTENDS  shift, and go to state 7

    $default  reduce using rule 14 (Extension)

    Extension  go to state 8


State 4

    1 Start: Classes .

    $default  reduce using rule 1 (Start)


State 5

    3 Classes: Class . Classes
    4        | Class .

    T_ID  shift, and go to state 1

    $default  reduce using rule 4 (Classes)

    Id       go to state 3
    Classes  go to state 9
    Class    go to state 5


State 6

    0 $accept: Start $end .

    $default  accept


State 7

   13 Extension: T_EXTENDS . Id

    T_ID  shift, and go to state 1

    Id  go to state 10


State 8

   12 Class: Id Extension . T_OPENCURLYBRACE InsideClass T_CLOSECURLYBRACE

    T_OPENCURLYBRACE  shift, and go to state 11


State 9

    3 Classes: Class Classes .

    $default  reduce using rule 3 (Classes)


State 10

   13 Extension: T_EXTENDS Id .

    $default  reduce using rule 13 (Extension)


State 11

   12 Class: Id Extension T_OPENCURLYBRACE . InsideClass T_CLOSECURLYBRACE

    T_BOOL  shift, and go to state 12
    T_INT   shift, and go to state 13
    T_ID    shift, and go to state 1

    $default  reduce using rule 20 (Methods)

    Id           go to state 14
    Type         go to state 15
    InsideClass  go to state 16
    Members      go to state 17
    Member       go to state 18
    Methods      go to state 19
    Method       go to state 20


State 12

    6 Type: T_BOOL .

    $default  reduce using rule 6 (Type)


State 13

    5 Type: T_INT .

    $default  reduce using rule 5 (Type)


State 14

    7 Type: Id .
   21 Method: Id . T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLYBRACE MethodBody T_CLOSECURLYBRACE

    T_OPENPAREN  shift, and go to state 21

    $default  reduce using rule 7 (Type)


State 15

   18 Member: Type . Id

    T_ID  shift, and go to state 1

    Id  go to state 22


State 16

   12 Class: Id Extension T_OPENCURLYBRACE InsideClass . T_CLOSECURLYBRACE

    T_CLOSECURLYBRACE  shift, and go to state 23


State 17

   15 InsideClass: Members .

    $default  reduce using rule 15 (InsideClass)


State 18

   16 Members: Member . Members

    T_BOOL  shift, and go to state 12
    T_INT   shift, and go to state 13
    T_ID    shift, and go to state 1

    $default  reduce using rule 20 (Methods)

    Id       go to state 14
    Type     go to state 15
    Members  go to state 24
    Member   go to state 18
    Methods  go to state 19
    Method   go to state 20


State 19

   17 Members: Methods .

    $default  reduce using rule 17 (Members)


State 20

   19 Methods: Method . Methods

    T_ID  shift, and go to state 1

    $default  reduce using rule 20 (Methods)

    Id       go to state 25
    Methods  go to state 26
    Method   go to state 20


State 21

   21 Method: Id T_OPENPAREN . Params T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLYBRACE MethodBody T_CLOSECURLYBRACE

    T_ID  shift, and go to state 1

    $default  reduce using rule 23 (Params)

    Id      go to state 27
    Params  go to state 28
    Param   go to state 29


State 22

   18 Member: Type Id .

    $default  reduce using rule 18 (Member)


State 23

   12 Class: Id Extension T_OPENCURLYBRACE InsideClass T_CLOSECURLYBRACE .

    $default  reduce using rule 12 (Class)


State 24

   16 Members: Member Members .

    $default  reduce using rule 16 (Members)


State 25

   21 Method: Id . T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLYBRACE MethodBody T_CLOSECURLYBRACE

    T_OPENPAREN  shift, and go to state 21


State 26

   19 Methods: Method Methods .

    $default  reduce using rule 19 (Methods)


State 27

   26 Param: Id . T_COLON Type

    T_COLON  shift, and go to state 30


State 28

   21 Method: Id T_OPENPAREN Params . T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLYBRACE MethodBody T_CLOSECURLYBRACE

    T_CLOSEPAREN  shift, and go to state 31


State 29

   22 Params: Param . MoreParams

    T_COMMA  shift, and go to state 32

    $default  reduce using rule 25 (MoreParams)

    MoreParams  go to state 33


State 30

   26 Param: Id T_COLON . Type

    T_BOOL  shift, and go to state 12
    T_INT   shift, and go to state 13
    T_ID    shift, and go to state 1

    Id    go to state 34
    Type  go to state 35


State 31

   21 Method: Id T_OPENPAREN Params T_CLOSEPAREN . T_ARROW ReturnType T_OPENCURLYBRACE MethodBody T_CLOSECURLYBRACE

    T_ARROW  shift, and go to state 36


State 32

   24 MoreParams: T_COMMA . Param MoreParams

    T_ID  shift, and go to state 1

    Id     go to state 27
    Param  go to state 37


State 33

   22 Params: Param MoreParams .

    $default  reduce using rule 22 (Params)


State 34

    7 Type: Id .

    $default  reduce using rule 7 (Type)


State 35

   26 Param: Id T_COLON Type .

    $default  reduce using rule 26 (Param)


State 36

   21 Method: Id T_OPENPAREN Params T_CLOSEPAREN T_ARROW . ReturnType T_OPENCURLYBRACE MethodBody T_CLOSECURLYBRACE

    T_NONE  shift, and go to state 38
    T_BOOL  shift, and go to state 39
    T_INT   shift, and go to state 40
    T_ID    shift, and go to state 1

    Id          go to state 41
    ReturnType  go to state 42


State 37

   24 MoreParams: T_COMMA Param . MoreParams

    T_COMMA  shift, and go to state 32

    $default  reduce using rule 25 (MoreParams)

    MoreParams  go to state 43


State 38

   11 ReturnType: T_NONE .

    $default  reduce using rule 11 (ReturnType)


State 39

    9 ReturnType: T_BOOL .

    $default  reduce using rule 9 (ReturnType)


State 40

    8 ReturnType: T_INT .

    $default  reduce using rule 8 (ReturnType)


State 41

   10 ReturnType: Id .

    $default  reduce using rule 10 (ReturnType)


State 42

   21 Method: Id T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType . T_OPENCURLYBRACE MethodBody T_CLOSECURLYBRACE

    T_OPENCURLYBRACE  shift, and go to state 44


State 43

   24 MoreParams: T_COMMA Param MoreParams .

    $default  reduce using rule 24 (MoreParams)


State 44

   21 Method: Id T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLYBRACE . MethodBody T_CLOSECURLYBRACE

    T_IF     shift, and go to state 45
    T_PRINT  shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_BOOL   shift, and go to state 12
    T_INT    shift, and go to state 13
    T_ID     shift, and go to state 1

    $default  reduce using rule 34 (Statements)

    Id              go to state 48
    Type            go to state 49
    MethodBody      go to state 50
    Declarations    go to state 51
    Declaration     go to state 52
    Statements      go to state 53
    Assigner        go to state 54
    Statement       go to state 55
    PrintStatement  go to state 56
    WhileStatement  go to state 57
    IfStatement     go to state 58
    MethodCall      go to state 59


State 45

   44 IfStatement: T_IF . Expression T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE
   45            | T_IF . Expression T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE T_ELSE T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE

    T_MINUS      shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_NUM        shift, and go to state 62
    T_NEW        shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66
    T_ID         shift, and go to state 1

    Id          go to state 67
    Expression  go to state 68
    MethodCall  go to state 69


State 46

   42 PrintStatement: T_PRINT . Expression

    T_MINUS      shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_NUM        shift, and go to state 62
    T_NEW        shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66
    T_ID         shift, and go to state 1

    Id          go to state 67
    Expression  go to state 70
    MethodCall  go to state 69


State 47

   43 WhileStatement: T_WHILE . Expression T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE

    T_MINUS      shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_NUM        shift, and go to state 62
    T_NEW        shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66
    T_ID         shift, and go to state 1

    Id          go to state 67
    Expression  go to state 71
    MethodCall  go to state 69


State 48

    7 Type: Id .
   35 Assigner: Id . T_EQ Expression
   36         | Id . T_DOT Id T_EQ Expression
   68 MethodCall: Id . T_OPENPAREN MethodCallParams T_CLOSEPAREN
   69           | Id . T_DOT Id T_OPENPAREN MethodCallParams T_CLOSEPAREN

    T_EQ         shift, and go to state 72
    T_OPENPAREN  shift, and go to state 73
    T_DOT        shift, and go to state 74

    $default  reduce using rule 7 (Type)


State 49

   30 Declaration: Type . Id InlineDeclarations

    T_ID  shift, and go to state 1

    Id  go to state 75


State 50

   21 Method: Id T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLYBRACE MethodBody . T_CLOSECURLYBRACE

    T_CLOSECURLYBRACE  shift, and go to state 76


State 51

   27 MethodBody: Declarations . MaybeReturn

    T_RETURN  shift, and go to state 77

    $default  reduce using rule 47 (MaybeReturn)

    MaybeReturn  go to state 78


State 52

   28 Declarations: Declaration . Declarations

    T_IF     shift, and go to state 45
    T_PRINT  shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_BOOL   shift, and go to state 12
    T_INT    shift, and go to state 13
    T_ID     shift, and go to state 1

    $default  reduce using rule 34 (Statements)

    Id              go to state 48
    Type            go to state 49
    Declarations    go to state 79
    Declaration     go to state 52
    Statements      go to state 53
    Assigner        go to state 54
    Statement       go to state 55
    PrintStatement  go to state 56
    WhileStatement  go to state 57
    IfStatement     go to state 58
    MethodCall      go to state 59


State 53

   29 Declarations: Statements .

    $default  reduce using rule 29 (Declarations)


State 54

   37 Statement: Assigner .

    $default  reduce using rule 37 (Statement)


State 55

   33 Statements: Statement . Statements

    T_IF     shift, and go to state 45
    T_PRINT  shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_ID     shift, and go to state 1

    $default  reduce using rule 34 (Statements)

    Id              go to state 80
    Statements      go to state 81
    Assigner        go to state 54
    Statement       go to state 55
    PrintStatement  go to state 56
    WhileStatement  go to state 57
    IfStatement     go to state 58
    MethodCall      go to state 59


State 56

   40 Statement: PrintStatement .

    $default  reduce using rule 40 (Statement)


State 57

   39 Statement: WhileStatement .

    $default  reduce using rule 39 (Statement)


State 58

   41 Statement: IfStatement .

    $default  reduce using rule 41 (Statement)


State 59

   38 Statement: MethodCall .

    $default  reduce using rule 38 (Statement)


State 60

   58 Expression: T_MINUS . Expression

    T_MINUS      shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_NUM        shift, and go to state 62
    T_NEW        shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66
    T_ID         shift, and go to state 1

    Id          go to state 67
    Expression  go to state 82
    MethodCall  go to state 69


State 61

   62 Expression: T_OPENPAREN . Expression T_CLOSEPAREN

    T_MINUS      shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_NUM        shift, and go to state 62
    T_NEW        shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66
    T_ID         shift, and go to state 1

    Id          go to state 67
    Expression  go to state 83
    MethodCall  go to state 69


State 62

   63 Expression: T_NUM .

    $default  reduce using rule 63 (Expression)


State 63

   66 Expression: T_NEW . Id
   67           | T_NEW . Id T_OPENPAREN MethodCallParams T_CLOSEPAREN

    T_ID  shift, and go to state 1

    Id  go to state 84


State 64

   57 Expression: T_NOT . Expression

    T_MINUS      shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_NUM        shift, and go to state 62
    T_NEW        shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66
    T_ID         shift, and go to state 1

    Id          go to state 67
    Expression  go to state 85
    MethodCall  go to state 69


State 65

   64 Expression: T_TRUE .

    $default  reduce using rule 64 (Expression)


State 66

   65 Expression: T_FALSE .

    $default  reduce using rule 65 (Expression)


State 67

   59 Expression: Id .
   60           | Id . T_DOT Id
   68 MethodCall: Id . T_OPENPAREN MethodCallParams T_CLOSEPAREN
   69           | Id . T_DOT Id T_OPENPAREN MethodCallParams T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 73
    T_DOT        shift, and go to state 86

    $default  reduce using rule 59 (Expression)


State 68

   44 IfStatement: T_IF Expression . T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE
   45            | T_IF Expression . T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE T_ELSE T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE
   48 Expression: Expression . T_PLUS Expression
   49           | Expression . T_MINUS Expression
   50           | Expression . T_MULTI Expression
   51           | Expression . T_DIVID Expression
   52           | Expression . T_LESSTHAN Expression
   53           | Expression . T_LESSTHANOREQ Expression
   54           | Expression . T_EQUALS Expression
   55           | Expression . T_AND Expression
   56           | Expression . T_OR Expression

    T_PLUS            shift, and go to state 87
    T_MINUS           shift, and go to state 88
    T_MULTI           shift, and go to state 89
    T_DIVID           shift, and go to state 90
    T_LESSTHAN        shift, and go to state 91
    T_LESSTHANOREQ    shift, and go to state 92
    T_OPENCURLYBRACE  shift, and go to state 93
    T_OR              shift, and go to state 94
    T_AND             shift, and go to state 95
    T_EQUALS          shift, and go to state 96


State 69

   61 Expression: MethodCall .

    $default  reduce using rule 61 (Expression)


State 70

   42 PrintStatement: T_PRINT Expression .
   48 Expression: Expression . T_PLUS Expression
   49           | Expression . T_MINUS Expression
   50           | Expression . T_MULTI Expression
   51           | Expression . T_DIVID Expression
   52           | Expression . T_LESSTHAN Expression
   53           | Expression . T_LESSTHANOREQ Expression
   54           | Expression . T_EQUALS Expression
   55           | Expression . T_AND Expression
   56           | Expression . T_OR Expression

    T_PLUS          shift, and go to state 87
    T_MINUS         shift, and go to state 88
    T_MULTI         shift, and go to state 89
    T_DIVID         shift, and go to state 90
    T_LESSTHAN      shift, and go to state 91
    T_LESSTHANOREQ  shift, and go to state 92
    T_OR            shift, and go to state 94
    T_AND           shift, and go to state 95
    T_EQUALS        shift, and go to state 96

    $default  reduce using rule 42 (PrintStatement)


State 71

   43 WhileStatement: T_WHILE Expression . T_OPENCURLYBRACE Statements T_CLOSECURLYBRACE
   48 Expression: Expression . T_PLUS Expression
   49           | Expression . T_MINUS Expression
   50           | Expression . T_MULTI Expression
   51           | Expression . T_DIVID Expression
   52           | Expression . T_LESSTHAN Expression
   53           | Expression . T_LESSTHANOREQ Expression
   54           | Expression . T_EQUALS Expression
   55           | Expression . T_AND Expression
   56           | Expression . T_OR Expression

    T_PLUS            shift, and go to state 87
    T_MINUS           shift, and go to state 88
    T_MULTI           shift, and go to state 89
    T_DIVID           shift, and go to state 90
    T_LESSTHAN        shift, and go to state 91
    T_LESSTHANOREQ    shift, and go to state 92
    T_OPENCURLYBRACE  shift, and go to state 97
    T_OR              shift, and go to state 94
    T_AND             shift, and go to state 95
    T_EQUALS          shift, and go to state 96


State 72

   35 Assigner: Id T_EQ . Expression

    T_MINUS      shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_NUM        shift, and go to state 62
    T_NEW        shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66
    T_ID         shift, and go to state 1

    Id          go to state 67
    Expression  go to state 98
    MethodCall  go to state 69


State 73

   68 MethodCall: Id T_OPENPAREN . MethodCallParams T_CLOSEPAREN

    T_MINUS      shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_NUM        shift, and go to state 62
    T_NEW        shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66
    T_ID         shift, and go to state 1

    $default  reduce using rule 71 (MethodCallParams)

    Id                go to state 67
    Expression        go to state 99
    MethodCall        go to state 69
    MethodCallParams  go to state 100
